--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     Lorem ipsum dolor sit amet.</p>
                 <img style="height: 30px; width: auto"
                      src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/800px-Typescript_logo_2020.svg.png">
-                <p>Date: 2023-06-01</p>
+                <p>Date: 2021-06-01</p>
             </div>
         </fieldset>
         <br/>
@@ -50,7 +50,7 @@
                     Lorem ipsum dolor sit amet.</p>
                 <img style="height: 60px; width: auto"
                      src="https://miro.medium.com/v2/resize:fit:700/1*-uckV8DOh3l0bCvqZ73zYg.png">
-                <p>Date: 2023-05-01</p>
+                <p>Date: 2021-06-01</p>
             </div>
         </fieldset>
         <br>
@@ -59,8 +59,8 @@
     <hr>
     <br/>
     <footer>
-        <p>I made this with <3 in 2021</p>
-        <p>Impressum</p>
+        <p>I made this with 🧡 in 2021</p>
+        <a href="#">Impressum</a>
     </footer>
 
 </body>
